Add vim files to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# sveltekit files
 .DS_Store
 node_modules
 /build
@@ -6,3 +7,7 @@ node_modules
 .env
 .env.*
 !.env.example
+
+# vim files
+*.swp
+*.swo
